# MNN

./: .gitignore  CMakeLists.txt
demo/exec/: CMakeLists.txt  concat_dynamic_shape_test.cpp  module_test.cpp  opencl_test.cpp  xpu_test.cpp  yolov5s.cpp
include/MNN/: MNNDefine.h  MNNForwardType.h
my_test/cnn_test/: concat_layer.mnn  concat_layer.onnx  export_yolov5.py  save_pytorch_model.py
my_test/opencl_test/: auto.sh  cl_add.cpp  create_simple_onnx.py
my_test/test/: cmd_script.txt  create_model.py
project/android/: build_64.sh
schema/current/: MNN_generated.h  TensorflowOp_generated.h
schema/default/: MNN.fbs  TensorflowOp.fbs
source/backend/coreml/backend/: CoreMLOPRegister.cpp
source/backend/cpu/: CPUMyCustomOp.cpp  CPUMyCustomOp.hpp  CPUOPRegister.cpp
source/backend/nnapi/backend/: NNAPIOPRegister.cpp
source/backend/opencl/core/: OpenCLOPRegister.cpp
source/backend/xpu/: CMakeLists.txt
source/backend/xpu/backend/: XPUBackend.cpp  XPUBackend.hpp  XPUMemPool.cpp  XPUMemPool.hpp  XPURunningUtils.hpp
source/backend/xpu/execution/: XPUCast.cpp  XPUCast.hpp  XPUMyCustomOp.cpp  XPUMyCustomOp.hpp  XPUTensorConvert.cpp  XPUTensorConvert.hpp
source/core/: Backend.hpp
source/geometry/: GeometryOPRegister.cpp
source/shape/: ShapeMyCustomOp.cpp  ShapeRegister.cpp
tools/converter/source/onnx/: MyCustomOpOnnx.cpp
tools/cv/: CMakeLists.txt
